<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etCell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_cell"
        android:inputType="textPersonName" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_submit"
        android:onClick="btnSubmit"
        android:text="Submit" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_show_data"
        android:onClick="btnShowData"
        android:text="Show Data" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_edit_data"
        android:onClick="btnEditData"
        android:text="Edit Data" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_delete_data"
        android:onClick="btnDeleteData"
        android:text="Delete Data" />

</LinearLayout>